[gd_scene load_steps=14 format=3 uid="uid://dvofwlktvbcts"]

[ext_resource type="Script" uid="uid://caqtj05jw8now" path="res://property_blocks/property_block.gd" id="1_mvx66"]
[ext_resource type="Texture2D" uid="uid://d3y5186u78brm" path="res://resources/icons/redo.svg" id="2_llt7q"]
[ext_resource type="Script" uid="uid://2rp8m8jko3xo" path="res://property_blocks/text_edit.gd" id="3_qbbyf"]
[ext_resource type="Script" uid="uid://dfdtyckl77df4" path="res://addons/SmoothScroll/SmoothScrollContainer.gd" id="4_omguc"]
[ext_resource type="Script" uid="uid://dx2vfs4rouhu2" path="res://addons/SmoothScroll/scroll_damper/expo_scroll_damper.gd" id="5_g8fbg"]
[ext_resource type="Script" uid="uid://bps3ea2prgr2p" path="res://blocks/items/text/subscript.gd" id="5_lojyk"]
[ext_resource type="Script" uid="uid://c5oob8sj8ff8n" path="res://blocks/items/text/superscript.gd" id="6_w2dg5"]
[ext_resource type="Script" uid="uid://bnppbrxqmeu0s" path="res://blocks/items/text/symbol_coloring.gd" id="7_6hmvh"]

[sub_resource type="Resource" id="Resource_2n2f0"]
script = ExtResource("5_g8fbg")

[sub_resource type="Resource" id="Resource_lojyk"]
script = ExtResource("5_g8fbg")

[sub_resource type="RichTextEffect" id="RichTextEffect_3v34r"]
script = ExtResource("5_lojyk")
metadata/_custom_type_script = "uid://bps3ea2prgr2p"

[sub_resource type="RichTextEffect" id="RichTextEffect_4d10s"]
script = ExtResource("6_w2dg5")
metadata/_custom_type_script = "uid://c5oob8sj8ff8n"

[sub_resource type="RichTextEffect" id="RichTextEffect_75vrl"]
script = ExtResource("7_6hmvh")
metadata/_custom_type_script = "uid://bnppbrxqmeu0s"

[node name="VBoxContainer" type="VBoxContainer" node_paths=PackedStringArray("value_node", "reset_button")]
offset_right = 256.0
offset_bottom = 13.0
theme_override_constants/separation = 1
script = ExtResource("1_mvx66")
value_node = NodePath("PanelContainer/MarginContainer/VBoxContainer/TextEdit")
value_property = &"text"
reset_button = NodePath("HBoxContainer/Reset")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="PropertyName" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
size_flags_horizontal = 3
text = "state"
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3

[node name="Reset" type="Button" parent="HBoxContainer"]
layout_mode = 2
icon = ExtResource("2_llt7q")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
theme_type_variation = &"PanelLineEdit"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_top = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
z_index = 1
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_right = 2

[node name="SmoothScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
scroll_horizontal = 19
horizontal_scroll_mode = 3
vertical_scroll_mode = 0
script = ExtResource("4_omguc")
speed = 400.0
wheel_scroll_damper = SubResource("Resource_2n2f0")
dragging_scroll_damper = SubResource("Resource_lojyk")
metadata/_custom_type_script = "uid://dfdtyckl77df4"

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/SmoothScrollContainer"]
layout_mode = 2

[node name="Bold" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/SmoothScrollContainer/HBoxContainer2"]
layout_mode = 2
tooltip_text = "Bold"
mouse_filter = 1
theme_type_variation = &"ButtonWithPanel"
text = " "

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/SmoothScrollContainer/HBoxContainer2/Bold"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 10.0
offset_bottom = 17.0
mouse_filter = 1
bbcode_enabled = true
text = "[b]b"
fit_content = true
autowrap_mode = 0

[node name="Italics" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/SmoothScrollContainer/HBoxContainer2"]
layout_mode = 2
tooltip_text = "Italics"
mouse_filter = 1
theme_type_variation = &"ButtonWithPanel"
text = " "

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/SmoothScrollContainer/HBoxContainer2/Italics"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 10.0
offset_bottom = 17.0
mouse_filter = 1
bbcode_enabled = true
text = "[i]i"
fit_content = true
autowrap_mode = 0

[node name="Underline" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/SmoothScrollContainer/HBoxContainer2"]
layout_mode = 2
tooltip_text = "Underline"
mouse_filter = 1
theme_type_variation = &"ButtonWithPanel"
text = " "

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/SmoothScrollContainer/HBoxContainer2/Underline"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 10.0
offset_bottom = 17.0
mouse_filter = 1
bbcode_enabled = true
text = "[u]u"
fit_content = true
autowrap_mode = 0

[node name="Strikethrough" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/SmoothScrollContainer/HBoxContainer2"]
layout_mode = 2
tooltip_text = "Strike-through"
mouse_filter = 1
theme_type_variation = &"ButtonWithPanel"
text = " "

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/SmoothScrollContainer/HBoxContainer2/Strikethrough"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 10.0
offset_bottom = 17.0
mouse_filter = 1
bbcode_enabled = true
text = "[s]s"
fit_content = true
autowrap_mode = 0

[node name="Center" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/SmoothScrollContainer/HBoxContainer2"]
layout_mode = 2
tooltip_text = "Center"
mouse_filter = 1
theme_type_variation = &"ButtonWithPanel"
text = "center"

[node name="Color" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/SmoothScrollContainer/HBoxContainer2"]
layout_mode = 2
tooltip_text = "Color"
mouse_filter = 1
theme_type_variation = &"ButtonWithPanel"
text = "color"

[node name="UL" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/SmoothScrollContainer/HBoxContainer2"]
layout_mode = 2
tooltip_text = "List (unordered)"
mouse_filter = 1
theme_type_variation = &"ButtonWithPanel"
text = "    "

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/SmoothScrollContainer/HBoxContainer2/UL"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 10.0
offset_bottom = 17.0
mouse_filter = 1
bbcode_enabled = true
text = "â€¢ ul"
fit_content = true
autowrap_mode = 0

[node name="OL" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/SmoothScrollContainer/HBoxContainer2"]
layout_mode = 2
tooltip_text = "List (Ordered)"
mouse_filter = 1
theme_type_variation = &"ButtonWithPanel"
text = "     "

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/SmoothScrollContainer/HBoxContainer2/OL"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 10.0
offset_bottom = 17.0
mouse_filter = 1
bbcode_enabled = true
text = "1. ol"
fit_content = true
autowrap_mode = 0

[node name="Super" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/SmoothScrollContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "Superscript"
mouse_filter = 1
theme_type_variation = &"ButtonWithPanel"
text = "  "

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/SmoothScrollContainer/HBoxContainer2/Super"]
clip_contents = false
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 16.0
offset_bottom = 16.0
mouse_filter = 1
bbcode_enabled = true
text = "t[superscript]_"
fit_content = true
autowrap_mode = 0
custom_effects = [SubResource("RichTextEffect_3v34r"), SubResource("RichTextEffect_4d10s"), SubResource("RichTextEffect_75vrl")]

[node name="Sub" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/SmoothScrollContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "Subscript"
mouse_filter = 1
theme_type_variation = &"ButtonWithPanel"
text = "  "

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/SmoothScrollContainer/HBoxContainer2/Sub"]
clip_contents = false
layout_mode = 0
offset_left = 3.0
offset_top = 2.0
offset_right = 17.0
offset_bottom = 16.0
mouse_filter = 1
bbcode_enabled = true
text = "t[subscript]-"
fit_content = true
autowrap_mode = 0
custom_effects = [SubResource("RichTextEffect_3v34r"), SubResource("RichTextEffect_4d10s"), SubResource("RichTextEffect_75vrl")]

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
z_index = 1
layout_mode = 2
theme_type_variation = &"MultilineSeparator"

[node name="TextEdit" type="TextEdit" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
size_flags_vertical = 3
mouse_force_pass_scroll_events = false
theme_type_variation = &"PropertyMultiline"
placeholder_text = "..."
wrap_mode = 1
scroll_smooth = true
draw_tabs = true
script = ExtResource("3_qbbyf")

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/SmoothScrollContainer/HBoxContainer2/Bold" to="PanelContainer/MarginContainer/VBoxContainer/TextEdit" method="_on_bold_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/SmoothScrollContainer/HBoxContainer2/Italics" to="PanelContainer/MarginContainer/VBoxContainer/TextEdit" method="_on_italics_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/SmoothScrollContainer/HBoxContainer2/Underline" to="PanelContainer/MarginContainer/VBoxContainer/TextEdit" method="_on_underline_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/SmoothScrollContainer/HBoxContainer2/Strikethrough" to="PanelContainer/MarginContainer/VBoxContainer/TextEdit" method="_strikethrough_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/SmoothScrollContainer/HBoxContainer2/Center" to="PanelContainer/MarginContainer/VBoxContainer/TextEdit" method="_on_center_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/SmoothScrollContainer/HBoxContainer2/Color" to="PanelContainer/MarginContainer/VBoxContainer/TextEdit" method="_on_color_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/SmoothScrollContainer/HBoxContainer2/UL" to="PanelContainer/MarginContainer/VBoxContainer/TextEdit" method="_ul_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/SmoothScrollContainer/HBoxContainer2/OL" to="PanelContainer/MarginContainer/VBoxContainer/TextEdit" method="_ol_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/SmoothScrollContainer/HBoxContainer2/Super" to="PanelContainer/MarginContainer/VBoxContainer/TextEdit" method="_super_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/SmoothScrollContainer/HBoxContainer2/Sub" to="PanelContainer/MarginContainer/VBoxContainer/TextEdit" method="_sub_pressed"]
[connection signal="text_changed" from="PanelContainer/MarginContainer/VBoxContainer/TextEdit" to="." method="property_change_emit"]
